# plugin_hub

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/src/plugin_hub_api/: __init__.py  config.py  db.py  main.py  models.py  repositories.py  schemas.py  worker_cli.py
apps/api/src/plugin_hub_api/routes/: collection_runs.py  collection_tasks.py  insights.py
apps/api/src/plugin_hub_api/services/: __init__.py  collection_runs.py  collection_task_worker.py  etl.py  insights.py  reddit_capture.py
apps/api/tests/: conftest.py  test_collection_runs_api.py  test_collection_tasks_api.py  test_contracts.py  test_etl_amazon.py  test_etl_reddit.py  test_import.py  test_insights.py  test_reddit_capture.py
apps/extension/: eslint.config.js  manifest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/extension/tests/: amazon-parser.test.ts  capture.test.ts  content-command-bar-model.test.ts  content-command-bar-render.test.tsx  contracts.test.ts  export-payload.test.ts  manifest.test.ts  page-detect.test.ts  reddit-parser.test.ts  settings.test.ts  upload-client.test.ts
apps/web/: eslint.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: api.test.ts  (+1 more)
docs/product/: product-prd-voc-browser-plugin-mvp-review.md
docs/workflows/: workflow-implementation-plan-voc-browser-plugin-mvp-review.md
scripts/: package-extension.mjs  start-collection-worker.sh  verify-extension-package.mjs
tests/fixtures/: amazon-review-page.html  reddit-thread.json
(+22 files in other folders)
